# lambda-spec

./: .dockerignore  .gitignore  CODEX_FINAL_PASS.md  DEMO_SCRIPT.md  Dockerfile  HACKATHON_SUBMISSION.md  LICENSE  PUSH.md  README.md  docker-compose.yml  pyproject.toml
.github/: bootstrap_payload.part00  bootstrap_payload.part01  bootstrap_payload.part02  bootstrap_payload.part03  bootstrap_payload.part04  bootstrap_payload.part05  bootstrap_payload.part06  bootstrap_payload.part07  bootstrap_payload.part08a  bootstrap_payload.part08b  bootstrap_payload.part09  bootstrap_resilience_lab.py
.github/workflows/: bootstrap-resilience-lab.yml  ci.yml  pages.yml
examples/: quickstart.py  resilience_lab.py
lambda_spec/: __init__.py  analysis.py  core.py  synthetic.py  webapp.py
lambda_spec/static/: analysis.js  app.js  index.html  styles.css
tests/: js_smoke.js  test_analysis.py  test_core.py  test_webapp.py
