[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lambda-spec"
version = "1.1.0"
description = "Fragilidad como limite del acoplamiento"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Omar Rafael Perez Gallardo", email = "digitaldr.qro@gmail.com"}]
dependencies = ["numpy>=1.20", "scipy>=1.7"]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["lambda_spec*"]
